hphp/hack/test/typecheck/final_property.php.exp
File "final_property.php", line 4, characters 21-27:
Properties cannot be declared final (Typing[4164])
