hphp/hack/test/typecheck/final_property.php
<?hh

class A {
  private final int $value1, $value2;
  public final int $value3;
  private int $value4;
}
